# Dictionary

./: README.md  meson.build  net.aidancornelius.Dictionary.json  requirements.txt
.flatpak-builder/checksums/: x86_64-net.aidancornelius.Dictionary.json
.flatpak-builder/downloads/067641623c9706403eaaea47b149e09fdd7d1b6b093074c038ed1f23467d7b5d/: PyMultiDictionary-1.2.4-py3-none-any.whl
.flatpak-builder/downloads/472290a2dfccfddc7eb1bd2d1ca6b174e988093c2ccb8b74743fe190625a9c61/: iso639_lang-2.2.3-py3-none-any.whl
data/: meson.build  net.aidancornelius.Dictionary.desktop.in  net.aidancornelius.Dictionary.gschema.xml  net.aidancornelius.Dictionary.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: dictionary.gresource.xml  dictionary.in  main.py  meson.build  window.py  window.ui
